--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -34,7 +34,7 @@ h6 {
 
 /* _______________Sections, Classes and Id's_______________ */
 
-/* Title */
+/* Title Section*/
 
 .navbar {
   justify-content: space-between;
@@ -320,7 +320,87 @@ h6 {
   color: #fff;
 }
 
-/* Footer */
+/* Contents Section*/
+.tray-wrapper {
+  padding: 1% 4%;
+  padding-right: 0;
+
+  /* So that title and image will be in column and easy to size the buttons
+  display: flex;
+  flex-direction: column; */
+  position: relative;
+}
+.tray-title h2 {
+  color: #fff;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 12px 0;
+}
+
+.tray-title h2:hover {
+  color: #1f80e0;
+  cursor: pointer;
+}
+
+.tray-container {
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+}
+
+.tray-box {
+  width: 150px;
+  height: 200px;
+  margin: 0 5px;
+  cursor: pointer;
+}
+.tray-box1 {
+  margin-left: 0;
+}
+.tray-image {
+  width: 150px;
+  height: 200px;
+  position: absolute;
+  border-radius: 10px;
+  transition: 0.3s ease;
+  z-index: 0;
+}
+.tray-image:hover {
+  transform: scale(1.3);
+  z-index: 1;
+}
+
+.tray-prev,
+.tray-next {
+  cursor: pointer;
+  width: 58px;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+  height: 200px;
+  bottom: 15px;
+  color: transparent;
+}
+
+.tray-prev {
+  left: 0;
+  justify-content: center;
+}
+
+.tray-next {
+  right: 0;
+  justify-content: flex-start;
+}
+
+.tray-wrapper:hover .tray-prev,
+.tray-wrapper:hover .tray-next {
+  background-color: #030b177e;
+  color: #fff;
+}
+
+/* Footer Section*/
 
 #footer {
   padding: 1% 4%;
